fix(): correct html list semantics on safari

--- a/packages/ods-react/src/components/query-filter/src/components/query-filter-tags/queryFilterTags.module.scss
+++ b/packages/ods-react/src/components/query-filter/src/components/query-filter-tags/queryFilterTags.module.scss
@@ -5,7 +5,7 @@
     gap: var(--ods-theme-row-gap) var(--ods-theme-column-gap);
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style-type: "";
 
     &__tag {
       white-space: nowrap;
